EEVEE Next - Refractive materials do not refract emissive materials #126455

Closed
opened 2024-08-18 10:37:33 +02:00 by Vyacheslav Kobozev · 2 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 552.22

Blender Version
Broken: version: 4.2.1 LTS Release Candidate, branch: blender-v4.2-release, commit date: 2024-08-16 13:35, hash: c97ceed55d61
Worked: 4.1.1

Short description of error
Refractive material only shows background through it, not emissive objects.
b4.1:
image

b4.2:
image

Exact steps for others to reproduce the error

  • Create a object with a emissive material (E.g. An emission shader). Other materials like a Diffuse BSDF seem to work fine.
  • Add another object and give it a refractive material (E.g. Glass BSDF)
  • Enable all the relevant settings for refraction in EEVEE
    • With the refractive material enable Material Propertie -> Settings -> Surface Raytraced Transmission
    • Enable Render Properties -> Ray Tracing
  • Enter the rendered 3D viewport and line up the camera and objects such that you're looking at the emissive object through the refractive object.
  • Notice that you can't see the emissive object.
  • This did not happen in 4.1.1

Here is a file with most of the steps done for you:
no refraction.blend

Original Steps

Open file with Blender 4.1 and Blender 4.2 , compare.
no refraction.blend

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 552.22 **Blender Version** Broken: version: 4.2.1 LTS Release Candidate, branch: blender-v4.2-release, commit date: 2024-08-16 13:35, hash: `c97ceed55d61` Worked: 4.1.1 **Short description of error** Refractive material only shows background through it, not emissive objects. b4.1: ![image](/attachments/7cb3e3e8-13af-4950-9d41-ab163f256403) b4.2: ![image](/attachments/de4860a1-ff21-4c90-bdad-4426ef16efa9) <video src="/attachments/de190024-b5b9-49a5-a12c-cb5d27f30dc4" title="2024-08-18_11-32-06.mp4" controls></video> **Exact steps for others to reproduce the error** - Create a object with a emissive material (E.g. An emission shader). Other materials like a Diffuse BSDF seem to work fine. - Add another object and give it a refractive material (E.g. Glass BSDF) - Enable all the relevant settings for refraction in EEVEE - With the refractive material enable `Material Propertie -> Settings -> Surface Raytraced Transmission` - Enable `Render Properties -> Ray Tracing` - Enter the rendered 3D viewport and line up the camera and objects such that you're looking at the emissive object through the refractive object. - Notice that you can't see the emissive object. - This did not happen in 4.1.1 Here is a file with most of the steps done for you: [no refraction.blend](/attachments/26e357ef-4cf9-4032-9ce0-2cc1ee16ef27) <details> <summary>Original Steps</summary> Open file with Blender 4.1 and Blender 4.2 , compare. [no refraction.blend](/attachments/26e357ef-4cf9-4032-9ce0-2cc1ee16ef27) </details>
Vyacheslav Kobozev added the
Severity
Normal
Type
Bug
Status
Needs Triage
labels 2024-08-18 10:37:33 +02:00
Vyacheslav Kobozev changed title from b4.2 Eevee pass-through refraction do not work at all to b4.2 Eevee pass-through refraction do not work at all with emissive shader 2024-08-18 12:36:04 +02:00

refraction fails with emission shader

refraction fails with emission shader
Member

I can confirm the issue here. Setting as high severity as this is a regression.

System Information
Operating system: macOS-14.6.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Pro 1.2
Blender version: 4.3.0 Alpha, branch: main, commit date: 2024-08-18 01:09, hash: 2e395d2aac40

I can confirm the issue here. Setting as high severity as this is a regression. **System Information** Operating system: macOS-14.6.1-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 Pro 1.2 Blender version: 4.3.0 Alpha, branch: main, commit date: 2024-08-18 01:09, hash: `2e395d2aac40`
Alaska changed title from b4.2 Eevee pass-through refraction do not work at all with emissive shader to EEVEE Next - Refractive materials do not refract emissive materials 2024-08-18 16:13:46 +02:00
Clément Foucault self-assigned this 2024-09-16 18:03:29 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-09-18 12:29:25 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#126455
No description provided.