source/blender/draw/engines/eevee_next/eevee_pipeline.hh
@@ -303,7 +303,7 @@ class DeferredLayer : DeferredLayerBase {
   }
 
   void begin_sync();
-  void end_sync(bool is_first_pass, bool is_last_pass);
+  void end_sync(bool is_first_pass, bool is_last_pass, bool next_layer_has_transmission);
 
   PassMain::Sub *prepass_add(::Material *blender_mat, GPUMaterial *gpumat, bool has_motion);
   PassMain::Sub *material_add(::Material *blender_mat, GPUMaterial *gpumat);
@@ -311,6 +311,11 @@ class DeferredLayer : DeferredLayerBase {
   bool is_empty() const
   {
     return closure_count_ == 0;
+  }
+
+  bool has_transmission() const
+  {
+    return closure_bits_ & CLOSURE_TRANSMISSION;
   }
 
   /* Returns the radiance buffer to feed the next layer. */
